1.change mvc framework to angular.js 2.test coding with angular.js

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,9 +11,11 @@ html(lang='en')
 
 body
 	include includes/topmenu
-	block header-content
+	.header-content
+		block header-content
 	
-	block main-content				
+	.main-content
+		block main-content				
 	
 	block footer
 		include includes/footer
